# CppRobots

./: .atom-build.json  .gitignore  CMakeLists.txt  LICENSE.md  README.md  Rules.json
cmake/: Doxyfile.in  version.h.in
config/: Names.json  Rules.json
doc/: CMakeLists.txt  Doxyfile.in  creatingAgents.md  mainpage.md
include/: Action.hpp  Agent.hpp  Angles.hpp  Collision.hpp  CppRobots.hpp  FrameTimer.hpp  Game.hpp  Player.hpp  Pose.hpp  Projectile.hpp  Rectangle.hpp  Robot.hpp  Rules.hpp  SignalSlot.hpp  Simulation.hpp  SimulationConsole.hpp  SimulationSFML.hpp  Vector.hpp  View.hpp  ViewConsole.hpp  ViewSFML.hpp  mathUtility.hpp  pathUtility.hpp  version.h.in
include/Agents/: Follower.hpp  Hunter.hpp  Orbiter.hpp  Sniper.hpp  Wanderer.hpp
src/: CMakeLists.txt  Collision.cpp  FrameTimer.cpp  Game.cpp  Player.cpp  Pose.cpp  Projectile.cpp  Rectangle.cpp  Robot.cpp  Rules.cpp  Simulation.cpp  SimulationSFML.cpp  Vector.cpp  ViewConsole.cpp  ViewSFML.cpp  main.cpp  pathUtility.cpp  robots-gui.cpp  robots.cpp
src/Agents/: Follower.cpp  Hunter.cpp  Orbiter.cpp  Sniper.cpp  Wanderer.cpp
test/: CMakeLists.txt  testCollision.cpp  testMath.cpp  testPose.cpp  testRectangle.cpp  testSignal.cpp  testVector.cpp
